--- a/src/Components/SideBarMenuCardView.scss
+++ b/src/Components/SideBarMenuCardView.scss
@@ -5,22 +5,23 @@
 
     .profile {
         border-radius: 40%;
-        padding: 10px;
+        padding: 15px;
         box-sizing: border-box;
-        max-width: 128px;
+        max-width: 158px;
     }
     .profileInfo{
         overflow: hidden;
-        height: 80px;
+        height: 105px;
+        font-weight:lighter;
+        font-family:'Times New Roman', Times, serif;
         @include transition(height);
 
         &.collapse{
             opacity: 0;
             height: 0;
         }
-
         .name{
-            font-size: 20px;
+            font-size: 22px;
             font-weight: bold;
         }
 
