--- a/src/Components/SideBarMenuCardView.scss
+++ b/src/Components/SideBarMenuCardView.scss
@@ -7,11 +7,11 @@
         border-radius: 40%;
         padding: 15px;
         box-sizing: border-box;
-        max-width: 158px;
+        max-width: 178px;
     }
     .profileInfo{
         overflow: hidden;
-        height: 105px;
+        height: 130px;
         font-weight:lighter;
         font-family:'Times New Roman', Times, serif;
         @include transition(height);
@@ -21,13 +21,13 @@
             height: 0;
         }
         .name{
-            font-size: 22px;
+            font-size: 23px;
             font-weight: bold;
         }
 
         .url{
             a{
-                color: #79a8ff;
+                color: #dd7676;
                 &:hover{
                     color: aliceblue;
                 }
