--- a/src/Components/SideBarMenuItemView.scss
+++ b/src/Components/SideBarMenuItemView.scss
@@ -1,22 +1,22 @@
 @import './commonds.scss';
 
 .SideBarMenuItemView {
-    text-align: center;
-    display: flex;
+    text-align: right;
+    display: block;
     align-items: center;
     margin: 0 5px
    
     a{
         color: antiquewhite;
         text-decoration: none;
-        display: block;
+        display: flex;
         padding: 10px;
         width: 100%;
         border-radius: 5px; 
     }
     .ItemContent {
         display: flex;
-        flex-direction: row;
+        flex-direction:column;
         align-items: center;
         overflow: hidden;
         width: 100%;
@@ -25,7 +25,7 @@
         @include transition(width);
 
         &.collapsed{
-            width: 35px;
+            width: 70px;
         }
         
         .icon{
@@ -38,11 +38,12 @@
             margin-left: 10px;
             overflow: hidden;
             margin-top: 10%;
+            color: #9affb8;
         }
         
     }
     &:hover {
-        background-color: #403a63;
+        background-image: linear-gradient(200deg, #1b1b1b11, #3030312a, #2729294b, #363434b4);
         color: rgb(41, 62, 78)
 
     }
