--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,58 @@
+:root{
+  --header-height: 3rem;
+
+  /* Color mode HSL(hue, saturation, lighness)*/
+  --hue: 0;
+  --title-color: hsl(var(--hue), var(--sat), 20%);
+  --title-color-dark: hsl(var(--hue), var(--sat),0%);
+  --text-color: hsl(var(--hue), var(--sat), 46%);
+  --body-color: hsl(var(--hue), var(--sat), 98%);
+  --container-color: #fff;
+
+  /* Font and typography */
+  --body-font: "Poppins", sans-serif;
+
+  --big-font-size:3.5rem;
+  --h1-font-size:2.25rem;
+  --h2-font-size:1.5rem;
+  --h3-font-size:1.25rem;
+  --normal-font-size:1rem;
+  --small-font-size:0.875rem;
+  --smaller-font-size:0.813rem;
+  --tiny-font-size:0.625rem;
+  /* Font Weight */
+  --font-normal: 400;
+  --font-medium: 500;
+  --font-semi-bold: 600;
+  /* Margenes Bottom*/
+  --mb-0-25: 0.25rem;
+  --mb-0-5: 0.5rem;
+  --mb-0-75: 0.75rem;
+  --mb-1: 1rem;
+  --mb-1-5: 1.5rem;
+  --mb-2: 2rem;
+  --mb-2-5: 2.5rem;
+  --mb-3: 3rem;
+
+  /* z-index*/
+  --z-tooltip:10;
+  --z-fixed:100;
+  --z-modal:1000;
+}
+ 
+  /* Responsive typography*/
+ @media screen and (max-width: 992px) {
+  :root{
+    --big-font-size:2.75rem;
+    --h1-font-size:1.5rem;
+    --h2-font-size:1.25rem;
+    --h3-font-size:1rem;
+    --normal-font-size:0.983rem;
+    --small-font-size:0.813rem;
+    --smaller-font-size:0.75rem;
+      }
+}
+
 *{
   margin: 0;
   padding: 0;
@@ -73,9 +128,6 @@ button{
   margin-left:0.5em;
 }
 
-
-
-
 #root {
   max-width: 1280px;
   margin: 0 auto;
@@ -123,13 +175,28 @@ button{
     margin-left: var(--mb-1-5);
     margin-right: var(--mb-1-5);
   }
+  .button{
+    padding: 1rem 1.75rem;
+  }
+  .button_icon{
+    width: 22px;
+    height: 22px;
+  }
 }
 @media screen and (max-width: 768px){ 
-
+  .section{
+    padding: 2rem 0 4rem;
+  }
 }
 @media screen and (max-width: 576px){
 
 }
 @media screen and (max-width: 350px){
-
+  :root{
+    --big-font-size: 1.25rem;
+  }
+  .container{
+    margin-left: var(--mb-1);
+    margin-right: var(--mb-1);
+  }
 }
