--- a/src/Components/home/home.css
+++ b/src/Components/home/home.css
@@ -57,7 +57,7 @@
     box-shadow: inset 0 0 0 9px rgba(101, 191, 233, 0.3);
     order: 1;
     justify-self: center;
-    width: 250px;
+    width: 350px;
     height: 360px;
     border-radius: 30%;
     animation: profile_animate 12s ease-in-out infinite 0.9s;
@@ -90,3 +90,59 @@
         transform: translateY(3.75rem);
     }
 }
+@media screen and (max-width: 992px){ 
+    .home_content{
+        grid-template-columns: 100px repeat(2, 1fr);
+        column-gap: 1.25rem;
+    }
+    .home_emote{
+        width: 26px;
+        height: 26px;
+    }
+    .home_subtitle{
+        padding-left: 3.75rem;
+        margin-bottom: var(--mb-1);
+    }
+    .home_subtitle::before{
+        width: 42px;
+        top: 0.8rem;
+    }
+    .home_description{
+        max-width: initial;
+        margin-bottom: var(--mb-2-5);
+    }
+    .home_img{
+        width: 250px;
+        height: 250px;
+        box-shadow: inset 0 0 0 8px rgba(101, 191, 233, 0.3);
+    }
+  }
+  @media screen and (max-width: 768px){ 
+    .home_content{
+        grid-template-columns: 0.5fr 3fr;
+        padding-top: 3.5rem;
+    }
+    .home_img{
+        order: initial;
+        justify-self: initial;
+    }
+    .home_data{
+        grid-column: 1/3;
+    }
+    .home_img{
+        box-shadow: inset 0 0 0 6px rgba(101, 191, 233, 0.3);
+        width: 200px;
+        height: 200px;
+    }
+  }
+  @media screen and (max-width: 350px){
+  
+    .home_img{
+        width: 180px;
+        height: 180px;
+    }
+    .home_emote{
+        width: 22px;
+        height: 22px;
+    }
+  }
