--- a/src/Components/SideBarMenu.scss
+++ b/src/Components/SideBarMenu.scss
@@ -8,22 +8,23 @@
     top: 0;
     height: 100%;
     display: flex;
-    flex-direction: column;
+    flex-direction: column; 
+    
 
     @include transition(width);
 
     &.expanded {
-        width: 280px;
+        width: 230px;
     }
 
     &.collapsed{
         width: 80px;
-          
+        top: 40;
     }
 
     .menuButton {
         display: flex;
-        justify-content: flex-end;
+        justify-content: center;
         
     }
     .NavIcon {
