--- a/src/Components/home/home.css
+++ b/src/Components/home/home.css
@@ -3,7 +3,7 @@
     row-gap: 7rem;
 }
 .home_content{
-    grid-template-columns: 116px repeat(2, 1fr);
+    grid-template-columns: 100px repeat(2, 1fr);
     padding-top: 5.5rem;
     column-gap: 2rem;
     align-items: center;
@@ -13,9 +13,11 @@
     grid-template-columns: max-content;
     row-gap: 1rem;
     height: 100px;
+    margin-left: 900%;
 }
 .home_social-icon{
-    font-size: 1.25rem;
+    
+    font-size: 1.35rem;
     color:var(--title-color)
 }
 .home_social-icon:hover{
@@ -34,7 +36,7 @@
 .home_subtitle{
     position: relative;
     font-size: var(--h3-font-size);
-    padding-left: 5.4rem;
+    padding-left: 1rem;
     font-weight: var(--font-normal);
     margin-bottom: var(--mb-1);
 }
@@ -50,7 +52,7 @@
     margin-bottom: var(--mb-3);
 }
 .home_img{
-    background: url(../../assets//Img/MyPhoto.jpg);
+    background: url(../../assets//Img/ProfileJoe.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -65,13 +67,13 @@
 
 @keyframes profile_animate {
     0%{
-        border-radius: 50% 30% 20% 60%/60% 20% 30% 50%;
+        border-radius: 45%;
     }
     50%{
-        border-radius: 20% 20% 30% 30%/30% 30% 20% 50%;
+        border-radius: 20% 20% 30% 30%/30% 30% 20% 20%;
     }
     100%{
-        border-radius: 50% 30% 20% 60%/60% 20% 30% 50%;
+        border-radius: 45%;
     }
 }
 .home_scroll{
@@ -100,7 +102,7 @@
         height: 26px;
     }
     .home_subtitle{
-        padding-left: 3.75rem;
+        padding-left: 1rem;
         margin-bottom: var(--mb-1);
     }
     .home_subtitle::before{
