New component skills added

--- a/src/App.css
+++ b/src/App.css
@@ -184,8 +184,14 @@ button{
   }
 }
 @media screen and (max-width: 768px){ 
+  body{
+    margin: 0 0 var(--header-height) 0;
+  }
   .section{
     padding: 2rem 0 4rem;
+  }
+  .section_subtitle{
+    margin-bottom: var(--mb-3);
   }
 }
 @media screen and (max-width: 576px){
