--- a/src/Components/sideBar/SideBarMenuItemView.scss
+++ b/src/Components/sideBar/SideBarMenuItemView.scss
@@ -4,35 +4,36 @@
     text-align: right;
     display: block;
     align-items: center;
-    margin: 0 5px
-   
-    a{
+
+    margin: 0 5px a {
         color: antiquewhite;
         text-decoration: none;
         display: flex;
         padding: 10px;
         width: 100%;
-        border-radius: 5px; 
+        border-radius: 5px;
     }
+
     .ItemContent {
         display: flex;
-        flex-direction:column;
+        flex-direction: column;
         align-items: center;
         overflow: hidden;
         width: 100%;
         white-space: nowrap;
-        
+
         @include transition(width);
 
-        &.collapsed{
+        &.collapsed {
             width: 0px;
         }
-        
-        .icon{
+
+        .icon {
             width: 20px;
             height: 32px;
             margin-top: 10%;
         }
+
         .label {
             font-weight: 500;
             margin-left: 10px;
@@ -40,22 +41,25 @@
             margin-top: 0%;
             color: #9affb8;
         }
-        
+
     }
+
     &:hover {
         background-image: linear-gradient(200deg, #1b1b1b11, #3030312a, #2729294b, #363434b4);
         color: rgb(41, 62, 78)
-
     }
+
     &:hover {
-        & + .tooltip{
+        &+.tooltip {
             display: inline-block;
             animation-duration: 0.4s;
             animation-name: tooltip;
         }
     }
-    
-}.tooltip{
+
+}
+
+.tooltip {
     position: absolute;
     background-color: black;
     left: 70px;
@@ -63,15 +67,14 @@
     border-radius: 4px;
     text-transform: capitalize;
     display: none;
-}  
+}
 
-@keyframes tooltip{
+@keyframes tooltip {
     from {
         opacity: 0;
     }
-    to{
+
+    to {
         opacity: 1;
     }
 }
-
-
