New components 'services' and 'qualifications' added

--- a/src/Components/about/about.css
+++ b/src/Components/about/about.css
@@ -48,6 +48,7 @@
     font-size: large;
 }
 
+/* For large devices */
 @media screen and (max-width: 992px) {
     .about_container {
         grid-template-columns: 2fr;
@@ -86,6 +87,7 @@
     }
 }
 
+/* For small devices */
 @media screen and (max-width: 350px) {
 
     .about_info {
