--- a/src/Components/home/home.css
+++ b/src/Components/home/home.css
@@ -105,6 +105,7 @@
     }
 }
 
+/* For large devices */
 @media screen and (max-width: 992px) {
     .home_content {
         grid-template-columns: 100px repeat(2, 1fr);
@@ -138,6 +139,7 @@
     }
 }
 
+/* For medium devices */
 @media screen and (max-width: 768px) {
     .home_content {
         grid-template-columns: 0.5fr 3fr;
@@ -160,6 +162,7 @@
     }
 }
 
+/* For small devices */
 @media screen and (max-width: 350px) {
 
     .home_img {
