--- a/src/App.css
+++ b/src/App.css
@@ -66,11 +66,11 @@ body,button,textarea,input{
   font-size:medium;
 }
 body{
-  background-image: linear-gradient(190deg, #051227, #1f4b8f, #1d8391, #c4722e);
-  color: #a5da81;
+  background-image: linear-gradient(195deg, #141416, #041227, #0b1e41, #132d53,#163264,#23498a, #1d7691, #25a0c5, #3e99af , #ce7226);
+  color: #cfe7e4;
 }
 h1, h2, h3{
-  color: #a5da81; 
+  color: #cad5e2; 
   font-weight: lighter;
 }
 ul{
@@ -90,12 +90,12 @@ img{
 }
 /* Reusable css classes*/
 .section_title{
-  font-size: large;
+  font-size: x-large;
 }
 .section_subtitle{
-  font-size: small;
-  display: block;
-  margin-bottom: 4rem;
+  font-size: var(--normal-font-size);
+  display:grid;
+  margin-bottom: 6rem;
 }
 .section_title, .section_subtitle{
   text-align: center;
@@ -103,7 +103,7 @@ img{
 
 /* Layout*/
 .container{
-  max-width: 968px;
+  max-width: 1300px;
   margin-left: auto;
   margin-right: auto;
 }
