--- a/src/Components/home/home.css
+++ b/src/Components/home/home.css
@@ -4,22 +4,22 @@
 
 .home_content {
     grid-template-columns: 100px repeat(2, 1fr);
-    padding-top: 5.5rem;
-    column-gap: 2rem;
+    padding-top: 7.5rem;
+    column-gap: 0rem;
     align-items: center;
 }
 
 .home_social {
-    display: grid;
-    grid-template-columns: max-content;
+    display:flex;
     row-gap: 1rem;
     height: 100px;
-    margin-left: 100%;
+    margin-left: 350%;
+    margin-bottom: 350%;
 }
 
 .home_social-icon {
 
-    font-size: 1.35rem;
+    font-size: 1.50rem;
     color: var(--title-color)
 }
 
@@ -137,6 +137,13 @@
         height: 250px;
         box-shadow: inset 0 0 0 8px rgba(101, 191, 233, 0.3);
     }
+    .home_social {
+        display:flex;
+        row-gap: 1rem;
+        height: 100px;
+        margin-left: 300%;
+        margin-bottom: 300%;
+    }
 }
 
 /* For medium devices */
@@ -160,6 +167,13 @@
         width: 200px;
         height: 200px;
     }
+    .home_social {
+        display:flex;
+        row-gap: 1rem;
+        height: 100px;
+        margin-left: 300%;
+        margin-bottom: 300%;
+    }
 }
 
 /* For small devices */
@@ -173,5 +187,12 @@
     .home_emote {
         width: 22px;
         height: 22px;
+    }
+    .home_social {
+        display:flex;
+        row-gap: 1rem;
+        height: 100px;
+        margin-left: 300%;
+        margin-bottom: 300%;
     }
 }
