--- a/src/Components/home/home.css
+++ b/src/Components/home/home.css
@@ -13,8 +13,8 @@
     display:flex;
     row-gap: 1rem;
     height: 100px;
-    margin-left: 350%;
-    margin-bottom: 350%;
+    margin-left: 330%;
+    margin-bottom: 360%;
 }
 
 .home_social-icon {
@@ -35,13 +35,13 @@
 .home_emote {
     width: 38px;
     height: 38px;
-    margin-left: 0.4rem;
+    margin-left: 0px;
 }
 
 .home_subtitle {
     position: relative;
     font-size: var(--h3-font-size);
-    padding-left: 1rem;
+    padding-left: 10rem;
     font-weight: var(--font-normal);
     margin-bottom: var(--mb-1);
 }
@@ -60,7 +60,7 @@
 }
 
 .home_img {
-    background: url(../../assets//Img/ProfileJoe.jpg);
+    background: url(../../assets//Img/MyProfile.jpg);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -71,6 +71,18 @@
     height: 360px;
     border-radius: 30%;
     animation: profile_animate 12s ease-in-out infinite 0.9s;
+}
+.send{
+    color: #a88dea;
+    box-shadow: #cdc9d6;
+    background-color: #9c85d63a; /* Green */
+    border: none;
+    border-radius: 3%;
+    padding: 6px 7px;
+    text-align: center;
+    text-decoration: none;
+    display: flexbox;
+    margin-left: 50px;
 }
 
 @keyframes profile_animate {
@@ -115,11 +127,13 @@
     .home_emote {
         width: 26px;
         height: 26px;
+        margin-left: 18px;
     }
 
     .home_subtitle {
         padding-left: 1rem;
         margin-bottom: var(--mb-1);
+        margin-left: 0px;
     }
 
     .home_subtitle::before {
@@ -141,8 +155,8 @@
         display:flex;
         row-gap: 1rem;
         height: 100px;
-        margin-left: 300%;
-        margin-bottom: 300%;
+        margin-left: 230%;
+        margin-bottom: 390%;
     }
 }
 
@@ -166,13 +180,18 @@
         box-shadow: inset 0 0 0 6px rgba(101, 191, 233, 0.3);
         width: 200px;
         height: 200px;
+        margin-left: -20px;
     }
     .home_social {
         display:flex;
         row-gap: 1rem;
         height: 100px;
-        margin-left: 300%;
-        margin-bottom: 300%;
+        margin-left: 160%;
+        margin-bottom: 280%;
+    }
+    .home_subtitle {
+        margin-bottom: var(--mb-1);
+        margin-left: 0px;
     }
 }
 
@@ -192,7 +211,7 @@
         display:flex;
         row-gap: 1rem;
         height: 100px;
-        margin-left: 300%;
-        margin-bottom: 300%;
+        margin-left: 230%;
+        margin-bottom: 390%;
     }
 }
