Add new components and footer

--- a/src/App.css
+++ b/src/App.css
@@ -66,7 +66,7 @@ body,button,textarea,input{
   font-size:medium;
 }
 body{
-  background-image: linear-gradient(195deg, #141416, #041227, #0b1e41, #132d53,#163264,#23498a, #1d7691, #25a0c5, #3e99af , #ce7226);
+  background-image: linear-gradient(195deg, #000000, #050118, #041024, #112549, #193358,#304c7c,#446db3, #488ca1, #3f9fbd, #73c2d6 , #ce9326);
   color: #cfe7e4;
 }
 h1, h2, h3{
@@ -89,6 +89,9 @@ img{
   height: auto;
 }
 /* Reusable css classes*/
+section{
+  line-height: large;
+}
 .section_title{
   font-size: x-large;
 }
