--- a/src/Components/skills/skills.css
+++ b/src/Components/skills/skills.css
@@ -9,18 +9,22 @@
     border: 1px solid #161515;
     padding: 2rem 4rem;
     border-radius: 1.25rem;
+    background-image: linear-gradient(190deg, #d5ecea, #acc2d8, #a7b0c4, #d8b97efa);
+    color: #1d3549;
 }
 .skills_title{
-    font-size: var(--normal-font-size);
+    font-size: large;
     font-weight: var(--font-medium);
     text-align:center;
     margin-bottom: var(--mb-1-5);
+    color: #1d3549;
 }
 
 .skills_box{
     display: flex;
     justify-content: center;
     column-gap: 2.5rem;
+    
 }
 .skills_group{
     display: grid;
@@ -30,6 +34,9 @@
 .skills_data{
     display: flex;
     column-gap: 0.5rem;
+    color: #1d3549;
+    
+    text-align: left;
 }
 .skills .bx-badge-check{
     font-size: 1rem;
@@ -40,6 +47,8 @@
     font-size: var(--normal-font-size);
     font-weight: var(--font-medium);
     line-height: 18x;
+    color: #8b1d4b;
+    text-align: left;
 }
 .skills_level{
     font-size: var(--tiny-font-size);
