--- a/src/Components/qualifications/qualifications.css
+++ b/src/Components/qualifications/qualifications.css
@@ -1,11 +1,13 @@
 .qualification-container {
     max-width: 768px;
+    color: rgb(245, 219, 241);
 }
 
 .qualiification-tabs {
     display: flex;
     justify-content: center;
     margin-bottom: var(--mb-2);
+    color: rgb(245, 219, 241);
 }
 .qualification-button {
     font-size: var(--h3-font-size);
@@ -13,6 +15,7 @@
     color: var(--title-color);
     margin: 0 var(--mb-1);
     cursor: pointer;
+    v
 }
 
 .qualification-button:hover {
@@ -32,6 +35,7 @@
     display: grid;
     grid-template-columns: 0.5fr;
     justify-content: center;
+    
 }
 
 .qualification-content {
@@ -51,12 +55,14 @@
 .qualification-title {
     font-size: var(--normal-font-size);
     font-weight: var(--font-medium);
+    color: rgb(225, 226, 135);
 }
 
 .qualification-subtitle {
     display: inline-block;
     font-size: var(--small-font-size);
     margin-bottom: var(--mb-1);
+    color: rgb(230, 214, 129);
 }
 
 
@@ -79,7 +85,12 @@
     background-color: var(--text-color);
     transform: translate(6px, -7px);
 } 
-
+.section-title-q{
+    color: rgb(255, 255, 255);
+}
+.section-subtitle-q{
+    color: rgb(245, 219, 241);
+}
 /* For large devices */
 @media screen and (max-width: 992px) {
     .qualification-container {
