--- a/src/App.css
+++ b/src/App.css
@@ -62,7 +62,7 @@ html{
   scroll-behavior: smooth;
 }
 body,button,textarea,input{
-  font-family:'Courier New', Courier, monospace;
+  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
   font-size:medium;
 }
 body{
