--- a/src/Components/skills/skills.css
+++ b/src/Components/skills/skills.css
@@ -17,7 +17,7 @@
     font-weight: var(--font-medium);
     text-align:center;
     margin-bottom: var(--mb-1-5);
-    color: #1d3549;
+    color: #40576a;
 }
 
 .skills_box{
@@ -33,8 +33,9 @@
 }
 .skills_data{
     display: flex;
-    column-gap: 0.5rem;
-    color: #1d3549;
+    column-gap: 1rem;
+    font-size: 19px;
+    color: #606025;
     
     text-align: left;
 }
@@ -47,7 +48,7 @@
     font-size: var(--normal-font-size);
     font-weight: var(--font-medium);
     line-height: 18x;
-    color: #8b1d4b;
+    color: #943358;
     text-align: left;
 }
 .skills_level{
