--- a/src/Components/about/about.css
+++ b/src/Components/about/about.css
@@ -1,3 +1,6 @@
+.section_title{
+    text-shadow: 1px 1px 8px rgb(205, 213, 220);
+}
 .about_container {
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
