--- a/src/Components/contact/contact.css
+++ b/src/Components/contact/contact.css
@@ -1,8 +1,12 @@
+.section-title{
+    text-shadow: 1px 1px 7px rgb(171, 207, 216);
+    color: #f7f7f8;
+}
 .contact-container {
     grid-template-columns: repeat(2, max-content);
     justify-content: center;
-    column-gap: 6rem;
-    padding-bottom: 3rem;
+    column-gap: 9rem;
+    padding-bottom: 12rem;
 }
 
 .contact-title {
@@ -11,19 +15,19 @@
     font-weight: var(--font-medium);
     margin-bottom: var(--mb-1-5);
 }
-
 .contact-info {
     display: grid;
-    row-gap: 1rem;
+    row-gap: 1.5rem;
     grid-template-columns: 300px;
 }
 
 .contant-card {
-    background-color: var(--container-color);
+    background-image: linear-gradient(190deg, #e8e6fe, #ccd5ff, #d2e1ee, #dfd0b3, #dedda0dd);
     border: 1px solid rgba(0, 0, 0, 0.1);
     padding: 1rem;
     border-radius: 0.75rem;
     text-align: center;
+    color: #3f3f45;
 }
 
 .contact-card-icon {
@@ -35,6 +39,7 @@
 .contact-card-title,
 .contact-card-data{
     font-size: var(--small-font-size);
+    color: #121111;
 }
 
 .contact-card-title {
@@ -66,12 +71,14 @@
 
 .contact-form {
     width: 360px;
+    margin-top: 46px;
 }
 
 .contact-form-div {
     position: relative;
-    margin-bottom: var(--mb-2);
+    margin-bottom: var(--mb-3);
     height: 4rem;
+    background-color: #ccd5ff23;
 }
 
 .contact-form-input {
@@ -80,7 +87,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    border: 2px solid rgba(0, 0, 0, 0.3);
+    border: 2px solid rgba(12, 12, 12, 0.3);
     background: none;
     color: var(--text-color);
     outline: none;
@@ -111,6 +118,9 @@
 
 .contact-form-area textarea {
    resize: none; 
+}
+.buttonSend{
+    background-color: #c7ceef;
 }
 
 /* For large devices */
