--- a/src/Components/footer/footer.css
+++ b/src/Components/footer/footer.css
@@ -1,34 +1,47 @@
-.footer{
-    background-color: rgb(41, 41, 38);
+.footer {
+    background-color: transparent;
     border-top: 1px solid rgb(#383030, rgb(26, 27, 26), rgb(49, 49, 58));
 }
-.footer_container{
+
+.footer_container {
     padding: 2rem, 0 6rem;
 }
 
-.footer_title, .footer_link{
-    color: rgb(197, 236, 236);
+.footer_title,
+.footer_link {
+    color: rgb(146, 58, 41);
 }
-.footer_title{
+
+.footer_title {
     text-align: center;
     margin-bottom: var(--mb-2);
-    font-size: 40px;
+    font-size: 30px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    text-shadow: 1px 1px 9px rgb(213, 111, 80);
 }
-.footer_link:hover{
+
+.footer_link:hover {
     color: var(--title-color-dark);
 }
-.footer_list{
+
+.footer_list {
     display: flex;
     justify-content: center;
-    column-gap: 1.5rem;
+    column-gap: 9rem;
     margin-bottom: var(--mb-2);
+    margin-left: 100px;
 }
-.footer_social{
+
+.footer_social {
     display: flex;
     justify-content: center;
-    column-gap: 1.25rem;    
+    margin-left: 100px;
+    column-gap: 1.25rem;
+    font-size: x-large;
+    text-shadow: 1px 1px 7px rgb(171, 207, 216);
 }
-.footer_social-link{
+
+.footer_social-link {
     background-color: rgb(132, 149, 163);
     color: rgb(107, 156, 156);
     font-size: 1.25;
@@ -36,28 +49,115 @@
     border-radius: 0.5rem;
     display: inline-flex;
 }
-.footer_social-link:hover{
+
+.footer_social-link:hover {
     background-color: rgb(191, 204, 214);
 }
-.footer_copy{
-    display: block;
-    margin-top: 4.5rem;
-    color: var(--title-color);
-    text-align: center;
-    font-size: var(--smaller-font-size);
-}
 
-@media screen and (max-width: 768px) {
-    .footer_social-link{
+.footer_copy {
+    display: block;
+    margin-top: 3rem;
+    color: rgb(67, 9, 9);
+    text-align: center;
+    font-size: var(--medium-font-size);
+}
+@media screen and (max-width: 992px){ 
+    .footer_social-link {
         padding: 0.25rem;
         border-radius: 0.25rem;
         font-size: 1.5rem;
     }
+     .footer_list {
+        display: flex;
+        justify-content: center;
+        column-gap: 0rem;
+        margin-bottom: var(--mb-1);
+        margin-left: 0px;
+    }
+
+    .footer_social {
+        display: flex;
+        justify-content: center;
+        margin-left: 0px;
+        column-gap: 1.25rem;
+        font-size: x-large;
+        text-shadow: 1px 1px 7px rgb(171, 207, 216);
+    }
+  
+  }
+
+@media screen and (max-width: 768px) {
+    .footer_social-link {
+        padding: 0.25rem;
+        border-radius: 0.25rem;
+        font-size: 1.5rem;
+    }
+     .footer_list {
+        display: flex;
+        justify-content: center;
+        column-gap: 0rem;
+        margin-bottom: var(--mb-1);
+        margin-left: 0px;
+    }
+
+    .footer_social {
+        display: flex;
+        justify-content: center;
+        margin-left: 0px;
+        column-gap: 1.25rem;
+        font-size: x-large;
+        text-shadow: 1px 1px 7px rgb(171, 207, 216);
+    }
 }
+
 @media screen and (max-width: 576px) {
+    .footer_container {
+        padding: 1rem, 0 6rem;
+    }
+
+    .footer_list {
+        display: flex;
+        justify-content: center;
+        column-gap: 0rem;
+        margin-bottom: var(--mb-1);
+        margin-left: 0px;
+    }
+
+    .footer_social {
+        display: flex;
+        justify-content: center;
+        margin-left: 0px;
+        column-gap: 1.25rem;
+        font-size: x-large;
+        text-shadow: 1px 1px 7px rgb(171, 207, 216);
+    }
 }
+
 /* For small devices */
 @media screen and (max-width: 350px) {
 
-    
+    .footer_container {
+        padding: 1rem, 0 6rem;
+    }
+
+    .footer_container {
+        padding: 1rem, 0 6rem;
+    }
+
+    .footer_list {
+        display: flex;
+        justify-content: center;
+        column-gap: 0rem;
+        margin-bottom: var(--mb-1);
+        margin-left: 0px;
+    }
+
+    .footer_social {
+        display: flex;
+        justify-content: center;
+        margin-left: 0px;
+        column-gap: 1.25rem;
+        font-size: x-large;
+        text-shadow: 1px 1px 7px rgb(171, 207, 216);
+    }
 }
