--- a/src/Components/services/services.css
+++ b/src/Components/services/services.css
@@ -1,3 +1,9 @@
+.section-title-q{
+    text-shadow: 1px 1px 7px rgb(171, 207, 216);
+}
+.section-title{
+    text-shadow: 1px 1px 5px rgb(171, 207, 216);
+}
 .services-container {
     grid-template-columns: repeat(3, 270px);
     justify-content: center;
@@ -29,6 +35,7 @@
     margin-bottom: var(--mb-1);
     font-weight: var(--font-medium);
     margin-left: -10px;
+    color: rgb(65, 86, 92);
 }
 
 .services-button {
@@ -74,8 +81,8 @@
     background-color: var(--container-color);
     padding: 4.5rem 2.5rem 2.5rem;
     border-radius: 5rem;
-    background-image: linear-gradient(190deg, #2b635d, #2d5683, #31495c, #283a44fa);
-    color: #fefff5;
+    background-image: linear-gradient(190deg, #6fb0a9, #58669f, #45518d, #0d2836fa);
+    color: #d3efea;
 }
 
 .services-modal-close {
@@ -144,7 +151,7 @@
 /* For medium devices */
 @media screen and (max-width: 768px) {
     .services-container {
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(3, 1fr);
     }
 
     .services-content {
@@ -172,13 +179,16 @@
         column-gap: 0.25rem;
         cursor: pointer;
         margin-right: 0px;
+    } 
+    .services-container {
+        grid-template-columns: repeat(2, 1fr);
     }
 }
 
 /* For small devices */
 @media screen and (max-width: 350px) {
     .services_container {
-        grid-template-columns: max-content;
+        grid-template-columns: max-content; 
     }
 
     .services-content {
