--- a/src/Components/home/home.css
+++ b/src/Components/home/home.css
@@ -31,11 +31,12 @@
 .home_title {
     font-size: 50px;;
     margin-bottom: var(--mb-0-25);
+    text-shadow: 1px 1px 6px rgb(172, 198, 221);
 }
 
 .home_emote {
-    width: 38px;
-    height: 38px;
+    width: 40px;
+    height: 40px;
     margin-left: 0px;
 }
 
@@ -75,16 +76,16 @@
     animation: profile_animate 12s ease-in-out infinite 0.9s;
 }
 .sendBtn{
-    color: #a88dea;
-    box-shadow: #cdc9d6;
-    background-color: #9c85d63a; /* Green */
+    color: #a88dea; 
+    background-color: #aa93e23a; /* Green */
     border: none;
-    border-radius: 3%;
+    border-radius: 10%;
     padding: 6px 7px;
     text-align: center;
     text-decoration: none;
     display: flexbox;
     margin-left: 50px;
+    box-shadow: 0 0 50px rgba(163, 127, 162, 0.687)
 }
 
 @keyframes profile_animate {
