--- a/src/Components/work/work.css
+++ b/src/Components/work/work.css
@@ -28,7 +28,7 @@
 }
 
 .work-card {
-    background-image: linear-gradient(190deg, #bebfe6, #adc2d8, #a7b0c4, #db9d6bfa);
+    background-image: linear-gradient(190deg, #bebfe6, #adc2d8, #a7b0c4, #ba9fa9fa, #db9d6bfa);
     border:  1px solid rgba(0, 0, 0, 0.1);
     padding: 1.25rem;
     border-radius: 1rem;
@@ -49,7 +49,7 @@
 
 .work-button {
     color: rgb(231, 249, 252);
-    font-size: var(--medium-font-size);
+    font-size: var(--small-font-size);
     display: flex;
     align-items: center;
     column-gap: 0.25rem;
