--- a/src/Components/work/work.css
+++ b/src/Components/work/work.css
@@ -1,119 +1,103 @@
-.work-filters {
+.work_container {
     display: flex;
+    flex-wrap: wrap;
     justify-content: center;
-    align-items: center;
-    column-gap: 0.75rem;
-    margin-bottom: var(--mb-2);
-}
-
-.work-item {
-    cursor: pointer;
-    color: var(--title-color);
-    padding: 0.25rem 0.75rem;
-    font-weight: var(--font-medium);
-    border-radius: 0.5rem;
-    text-transform: capitalize;
-}
-
-.work-item:hover {
-    background-color: var(--title-color);
-    color: var(--container-color);
-
-}
-
-.work-container {
-    grid-template-columns: repeat(2, max-content);
-    gap: 3rem;
-    justify-content: center;
-}
-
-.work-card {
+    margin: 0 20%;
+  }
+  
+  .work_card {
+    width: 270px;
+    height: 400px;
+    margin: 20px;
+    text-align: center;
+    border-radius: 10px;
+    border: 1px solid rgba(0,0,0,0.2);
     background-image: linear-gradient(190deg, #bebfe6, #adc2d8, #a7b0c4, #ba9fa9fa, #db9d6bfa);
-    border:  1px solid rgba(0, 0, 0, 0.1);
-    padding: 1.25rem;
-    border-radius: 1rem;
-}
-
-.work-img {
-    width: 295px;
-    height: 195px;
-    border-radius: 1rem;
-    margin-bottom: var(--mb-1);
-}
-
-.work-title {
-    font-size: var(--normal-font-size);
-    font-weight: var(--font-medium);
-    font-weight: var(--mb-0-5);
-}
-
-.work-button {
-    color: rgb(231, 249, 252);
-    font-size: var(--small-font-size);
-    display: flex;
-    align-items: center;
-    column-gap: 0.25rem;
-    margin-left: 1px;
-}
-
-.work-button-icon {
-    font-size: 1rem;
-    transition: 0.4s;
-}
-
-.work-button:hover .work-button-icon {
-    transform: translateX(0.25rem);
-}
-
-/* active work */
-
-.active-work {
-    background-color: var(--title-color);
-    color: var(--container-color);
-} 
-/* For large devices */
-@media screen and (max-width: 992px) {
-    .work-container {
-        gap: 1.25rem;
-    }
-
-    .work-card {
-        padding: 1rem;
-    }
-
-    .work-img {
-        margin-bottom: 0.75rem;
-    }
-
-    .work-title {
-        margin-bottom: 0.25rem;
-    }
-}
+    box-shadow: 0 6px 8px rgba(214, 195, 159, 0.616);
+    transition: 0.3s ease-in;
+  }
   
-  /* For medium devices */
-@media screen and (max-width: 768px) {
-    .work-container {
-        grid-template-columns: max-content;
-    }
-}
+  .work_card:hover{
+    transform: scale(1.02);
+  }
   
-@media screen and (max-width: 576px) {
-    .work-container {
-        grid-template-columns: 1fr;
-    }
-
-    .work-img {
-        width: 100%;
-    }
-}
+  .work_img {
+    width: 90%;
+    height: 200px;
+    object-fit: cover;
+    margin-top: 10px;
+    border-radius: 10px;
+    border: 1px solid rgba(39, 176, 255, 0.2);
+  }
   
-  /* For small devices */
-@media screen and (max-width: 350px) {
-    .work-item {
-        font-size: var(--small-font-size);
+  .card-body {
+    padding: 20px;
+    text-align: center;
+    width: 100%;
+  }
+  
+  .work_title {
+    font-weight: bold;
+    margin-bottom: 10px;
+    color: white;
+  }
+  
+  .card-text {
+    font-size: 16px;
+    margin-bottom: 10px;
+    color: white;
+  }
+  
+  .work_title_link{
+    font-size: 16px;
+    margin-left: 0px;
+    height: 600;
+    color: #f0eadf;;
+  }
+  
+  
+  
+  @media screen and (max-width: 992px) {
+    .work_container {
+      gap: 1.25rem;
     }
-
-    .work-filters {
-        column-gap: 0.25rem;
+  
+    .work_card {
+      padding: 1rem;
     }
-}
+  
+    .work_img {
+      margin-bottom: 0.75rem;
+    }
+  
+    .work_title {
+      margin-bottom: 0.25rem;
+    }
+  }
+  
+  
+  @media screen and (max-width: 768px) {
+    .work_container {
+      grid-template-columns: max-content;
+    }
+  }
+  
+  @media screen and (max-width: 576px) {
+    .work_container {
+      grid-template-columns: 1fr;
+    }
+  
+    .work_img {
+      width: 100%;
+    }
+  }
+  
+  @media screen and (max-width: 350px) {
+    .work_item {
+      font-size: var(--small-font-size);
+    }
+  
+    .work_filters {
+      column-gap: 0.25rem;
+    }
+  }
