--- a/src/App.css
+++ b/src/App.css
@@ -43,22 +43,22 @@
 *{
   margin: 0;
   padding: 0;
-  box-sizing: border-box;
+  box-sizing: border-box ;
 }
 html{
   scroll-behavior: smooth;
+  background-size: cover;
+  background-image: url("/src/assets/Img/NightBackground.png");
 }
 body,button,textarea,input{
-  font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+  font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
   font-size:medium;
 }
 body{ 
   background-repeat: no-repeat;
   color: #cfe7e4;
-  background-image: linear-gradient(190deg, #000205, #031127, #1f5180, #4690bb, #7ebae2, #4169b3, #c98063, #ca8f42, #ddbb4b);
   width: 100%;
-  background-size: cover; 
-  z-index: -10;
+  z-index: -2;
 } 
 h1, h2, h3{
   color: #cad5e2; 
