--- a/src/Components/about/about.css
+++ b/src/Components/about/about.css
@@ -138,7 +138,34 @@ a{
         box-shadow: 0 0 50px rgba(222, 222, 189, 0.687)
     }
 }
+/* For cell devices */
+@media screen and (max-width: 390px) {
 
+    .about_info {
+        grid-template-columns: repeat(3, 1fr);
+        gap: 0.9rem;
+        margin-bottom: var(--mb-2);
+    }
+    .about_description { 
+        margin-bottom: var(--mb-2-5);
+        color: rgb(242, 243, 191);
+        font-size: large;
+        margin-left: 10px;
+    }a{
+        margin-left: 0px;
+    }
+    .aboutBtn{
+        color: rgb(242, 243, 191);
+        background-color: #f7f7d748; /* Green */
+        border: none;
+        border-radius: 20%;
+        padding: 6px 7px;
+        text-align: center;
+        text-decoration: none; 
+        margin-left: 14px;
+        box-shadow: 0 0 50px rgba(222, 222, 189, 0.842)
+    }
+}
 /* For small devices */
 @media screen and (max-width: 350px) {
 
