--- a/src/Components/work/work.css
+++ b/src/Components/work/work.css
@@ -91,7 +91,31 @@
       width: 100%;
     }
   }
+
+  @media screen and (max-width: 390px) {
+    .work_item {
+      font-size: var(--small-font-size);
+    }
   
+    .work_filters {
+      column-gap: 0.25rem;
+    }
+    
+    .work_card {
+      width: 270px;
+      height: 400px;
+      margin: -5px;
+      text-align: center;
+      border-radius: 10px;
+      border: 2px solid rgba(0,0,0,0.2);
+      background-image: linear-gradient(190deg, #bebfe6, #adc2d8, #a7b0c4, #ccb6a2, #db9d6b);
+      box-shadow: 0 6px 8px rgba(214, 195, 159, 0.616);
+      transition: 0.3s ease-in;
+      padding: 10%;
+      margin-top: 20px;
+    }
+  }
+
   @media screen and (max-width: 350px) {
     .work_item {
       font-size: var(--small-font-size);
