--- a/src/Components/home/home.css
+++ b/src/Components/home/home.css
@@ -277,7 +277,10 @@
         display:flex;;
         row-gap: 1rem;
         height: 100px;
-        margin-left: 72%;
+        margin-left: 75%;
+    }
+    .sendBtn{ 
+        margin-left: 36px; 
     }
 }
 /* For small devices */
